chore: Remove Guice warning